manifests/cluster-addons/forgejo-runner/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkitd
  namespace: forgejo-runner
spec:
  selector:
    app.kubernetes.io/name: buildkitd
  ports:
    - name: grpc
      port: 1234
      targetPort: 1234
