manifests/cluster-addons/forgejo-runner/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: buildkitd
  namespace: forgejo-runner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: buildkitd

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: runner
      toPorts:
        - ports:
            - port: '1234'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: registry
            app.kubernetes.io/name: registry
      toPorts:
        - ports:
            - port: '5000'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: runner
  namespace: forgejo-runner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: runner

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: forgejo
            app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: buildkitd
      toPorts:
        - ports:
            - port: '1234'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: runner-register
  namespace: forgejo-runner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: runner-register

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: forgejo
            app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP
